<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_enlarge"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/telros"
            android:textColor="@color/green"
            android:textSize="96sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_xsmall"
            app:endIconMode="clear_text"
            app:helperText="HELP"
            app:helperTextTextColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_xsmall"
            app:endIconMode="password_toggle"
            app:helperText="HELP"
            app:helperTextTextColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_forgot"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray"
            app:rippleColor="?attr/colorControlHighlight"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</ScrollView>